[gd_scene load_steps=9 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://CameraZoom.gd" type="Script" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://src/MeshNode2D.gd" type="Script" id=4]
[ext_resource path="res://kadraw_layout_button.gd" type="Script" id=5]
[ext_resource path="res://src/Menu.gd" type="Script" id=6]
[ext_resource path="res://textures/cam.png" type="Texture" id=7]
[ext_resource path="res://Menu/OptionsMenu.tscn" type="PackedScene" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MeshNode2D" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CameraCanvas" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="CameraZoom" type="Camera2D" parent="CameraCanvas"]
rotating = true
current = true
smoothing_speed = 20.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="CameraCanvas/CameraZoom"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="random_layout_button" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 212.0
margin_top = 12.0
margin_right = 292.0
margin_bottom = 54.0
text = "randomize"
script = ExtResource( 3 )

[node name="kadraw_layout_button" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 14.0
margin_top = 78.0
margin_right = 119.0
margin_bottom = 113.0
text = "KaDraw Layout"
script = ExtResource( 5 )

[node name="Menu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 21.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/Panel"]
margin_right = 150.0
margin_bottom = 23.0
mouse_filter = 0

[node name="FileMenuButton" type="MenuButton" parent="CanvasLayer/Menu/Panel/HBoxContainer"]
margin_right = 35.0
margin_bottom = 23.0
text = "File"
items = [ "Open Graph Configuration Folder", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="OpenGraphFileDialog" type="FileDialog" parent="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton"]
margin_left = 181.0
margin_top = 78.0
margin_right = 860.0
margin_bottom = 470.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.graph;METIS Format Graph Files" )
current_dir = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project"
current_path = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project/"

[node name="SaveGraphFileDialog" type="FileDialog" parent="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton"]
margin_right = 315.0
margin_bottom = 130.0

[node name="SaveCoordFileDialog" type="FileDialog" parent="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton"]
margin_right = 315.0
margin_bottom = 130.0

[node name="OpenGraphConfigDialog" type="FileDialog" parent="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton"]
margin_left = 181.0
margin_top = 78.0
margin_right = 860.0
margin_bottom = 470.0
window_title = "Open a Directory"
mode = 2
access = 2
filters = PoolStringArray( "Graph Configuration Directories, containing at least a .graph and a .coord file" )
current_dir = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project"
current_path = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project/"

[node name="DrawMenuButton" type="MenuButton" parent="CanvasLayer/Menu/Panel/HBoxContainer"]
visible = false
margin_left = 39.0
margin_right = 83.0
margin_bottom = 23.0
text = "Draw"
items = [ "Draw From KaDraw Coords", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="DrawFromKaDrawCoordsFileDialog" type="FileDialog" parent="CanvasLayer/Menu/Panel/HBoxContainer/DrawMenuButton"]
margin_left = 130.0
margin_top = 78.0
margin_right = 809.0
margin_bottom = 470.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.coord; KaDraw Format Coordinates" )
current_dir = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project"
current_path = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project/"

[node name="OptionsButton" type="Button" parent="CanvasLayer/Menu/Panel/HBoxContainer"]
visible = false
margin_left = 87.0
margin_right = 150.0
margin_bottom = 23.0
text = "Options"
flat = true

[node name="CameraButton" type="TextureButton" parent="CanvasLayer/Menu/Panel/HBoxContainer"]
visible = false
margin_left = 39.0
margin_top = -0.5
margin_right = 59.0
margin_bottom = 22.5
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "Take a Screenshot"
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/Menu"]

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_left = -876.5
margin_top = -494.0
margin_right = -147.5
margin_bottom = -106.0
mouse_filter = 2

[node name="GraphInfo" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 1.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="CanvasLayer/GraphInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/GraphInfo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "trol"
mouse_filter = 1
text = "No Graph Loaded"
align = 1
valign = 1

[node name="DrawFromKaDrawCoordsFileDialog" type="FileDialog" parent="."]
margin_right = 343.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project"
current_path = "/home/wayfarer/Desktop/graphvis stuff/GraphVis_project/"

[node name="NodeInfo" type="CanvasLayer" parent="."]

[node name="NodeInfoPanel" type="Panel" parent="NodeInfo"]
visible = false
self_modulate = Color( 1, 1, 1, 0.901961 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -297.0
margin_top = -284.0
margin_right = -147.0
margin_bottom = -149.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="NodeInfo/NodeInfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="NodeInfo/NodeInfoPanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 126.0
mouse_filter = 2
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="NodeIDLabel" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_right = 80.0
margin_bottom = 14.0
text = "NodeID:"

[node name="NodeID" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_left = 100.0
margin_right = 100.0
margin_bottom = 14.0

[node name="NumberOfNeighborsLabel" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_top = 34.0
margin_right = 80.0
margin_bottom = 48.0
text = "Degree:"

[node name="NumberOfNeighbors" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_left = 100.0
margin_top = 34.0
margin_right = 100.0
margin_bottom = 48.0

[node name="PartitionIDLabel" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_top = 68.0
margin_right = 80.0
margin_bottom = 82.0
text = "PartitionID:"

[node name="PartitionID" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_left = 100.0
margin_top = 68.0
margin_right = 100.0
margin_bottom = 82.0

[node name="VertexSetIDLabel" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_top = 102.0
margin_right = 80.0
margin_bottom = 116.0
text = "VertexSetID:"

[node name="VertexSetID" type="Label" parent="NodeInfo/NodeInfoPanel/MarginContainer/GridContainer"]
margin_left = 100.0
margin_top = 102.0
margin_right = 100.0
margin_bottom = 116.0

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 5

[connection signal="pressed" from="CanvasLayer/random_layout_button" to="." method="_on_random_layout_button_pressed"]
[connection signal="pressed" from="CanvasLayer/kadraw_layout_button" to="." method="_on_kadraw_layout_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton" to="." method="_on_FileMenuButton_pressed"]
[connection signal="file_selected" from="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton/OpenGraphFileDialog" to="CanvasLayer/Menu" method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton/SaveGraphFileDialog" to="CanvasLayer/Menu" method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton/SaveCoordFileDialog" to="CanvasLayer/Menu" method="_on_SaveCoordFileDialog_file_selected"]
[connection signal="dir_selected" from="CanvasLayer/Menu/Panel/HBoxContainer/FileMenuButton/OpenGraphConfigDialog" to="." method="_on_OpenGraphConfigDialog_dir_selected"]
[connection signal="file_selected" from="CanvasLayer/Menu/Panel/HBoxContainer/DrawMenuButton/DrawFromKaDrawCoordsFileDialog" to="CanvasLayer/Menu" method="_on_DrawFromKaDrawCoordsFileDialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Panel/HBoxContainer/CameraButton" to="." method="_on_CameraButton_pressed"]
[connection signal="popup_hide" from="CanvasLayer/OptionsMenu" to="." method="_on_OptionsMenu_popup_hide"]
